fix: 모바일 환경 scroll jumping 현상 수정

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ header {
     border-bottom: 1px solid #ddd;
     padding: 0px 48px;
     z-index: 10;
+    transform: scale(1.0); 
 
     display: flex;
     justify-content: space-between;
